--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=index.css.map */
+#GamemodeForm {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}/*# sourceMappingURL=index.css.map */
