--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,16 @@
 //   width: 100%;
 //   height: 100vh;
 // }
+#GamemodeForm{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    #GamemodeButtonGroup {
+        // margin: auto;
+        // display: flex;
+        // max-width: 100px;
+        // flex-direction: column;
+    }
+}
