--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,16 @@
 iframe {
   width: 100%;
   height: 100vh;
+}
+
+#dashboard-notification_table {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  color: black;
+  border: 1px solid #1876d1;
+  background-color: white;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  border-radius: 10px;
 }/*# sourceMappingURL=index.css.map */
