added blade and style

--- a/src/game_src/style.css
+++ b/src/game_src/style.css
@@ -2,5 +2,5 @@
   border: 3px solid black;
   width: 1000px;
   height: 1000px;
-  background: radial-gradient(#e66465, #9198e5);
+  background: radial-gradient(teal, rgb(1, 32, 32));
 }
