--- a/src/game_src/style.css
+++ b/src/game_src/style.css
@@ -37,3 +37,26 @@ body {
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 1;
 }
+
+.game-over {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 10, 10, 0.5);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-over__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 50%;
+  height: 50%;
+  background-color: white;
+  border-radius: 2rem;
+}
